--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
 				"build": {
 					"builder": "ngx-build-plus:browser",
 					"options": {
-						"outputPath": "docs/multi-tenant-management",
+						"outputPath": "dist/multi-tenant-management",
 						"index": "src/index.html",
 						"main": "src/main.ts",
 						"polyfills": "src/polyfills.ts",
@@ -28,6 +28,8 @@
 							"src/assets"
 						],
 						"styles": [
+							"node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+    						"node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
 							"src/styles.scss",
               {
                 "input": "node_modules/ngx-toastr/toastr.css",
@@ -48,8 +50,8 @@
 								},
 								{
 									"type": "anyComponentStyle",
-									"maximumWarning": "7kb",
-									"maximumError": "10kb"
+									"maximumWarning": "2kb",
+									"maximumError": "4kb"
 								}
 							],
 							"fileReplacements": [
