--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.1.0",
     "@angular/forms": "^14.1.0",
+    "@angular/material": "^7.0.0",
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
-    "ngx-toastr": "14.2.1",
+    "nash-web-components": "^0.0.9",
     "ngx-bootstrap": "^8.0.0",
+    "ngx-owl-carousel-o": "^14.0.0",
+    "ngx-toastr": "14.2.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "@angular/material": "^7.0.0",
-    "nash-web-components": "^0.0.5"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.1.2",
